[gd_scene load_steps=2 format=3 uid="uid://dbt3fqvgatxfn"]

[ext_resource type="Script" uid="uid://berg2eggi8xch" path="res://ui/game/campsite_ui/detailed_char_info.gd" id="1_bhkby"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhkby")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Portrait" type="TextureRect" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 5

[node name="Name" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Leloo"

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 2

[node name="Abilities" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2

[node name="Hp" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Hp"]
layout_mode = 2
text = "HP"

[node name="HPStat" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Hp"]
layout_mode = 2
text = "5"

[node name="Speed" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Speed"]
layout_mode = 2
text = "Speed"

[node name="SpeedStat" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Speed"]
layout_mode = 2
text = "5"

[node name="Strength" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Strength"]
layout_mode = 2
text = "Strength"

[node name="StrengthStat" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Strength"]
layout_mode = 2
text = "5"

[node name="Fight" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Fight"]
layout_mode = 2
text = "Fight"

[node name="FighStat" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities/Fight"]
layout_mode = 2
text = "5"

[node name="Control3" type="Control" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 2

[node name="Abilities2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2

[node name="Foraging" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/Foraging"]
layout_mode = 2
text = "Hunt/Forage"

[node name="ForagingCheck" type="CheckBox" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/Foraging"]
layout_mode = 2
mouse_filter = 2
button_mask = 0

[node name="WoodStone" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/WoodStone"]
layout_mode = 2
text = "Wood/Stone"

[node name="WoodCheck" type="CheckBox" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/WoodStone"]
layout_mode = 2
mouse_filter = 2
button_mask = 0

[node name="Crafting" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/Crafting"]
layout_mode = 2
text = "Crafting"

[node name="CraftCheck" type="CheckBox" parent="VBoxContainer/VBoxContainer2/HBoxContainer/Abilities2/Crafting"]
layout_mode = 2
mouse_filter = 2
button_mask = 0

[node name="Control2" type="Control" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Back" type="Button" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -43.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Back"
